src/test/ui/macros/macro-comma-behavior.core.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:36:23
   |
LL |     assert_eq!(1, 1, "{}",);
   |                       ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:39:23
   |
LL |     assert_ne!(1, 2, "{}",);
   |                       ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:45:29
   |
LL |     debug_assert_eq!(1, 1, "{}",);
   |                             ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:48:29
   |
LL |     debug_assert_ne!(1, 2, "{}",);
   |                             ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:72:19
   |
LL |     format_args!("{}",);
   |                   ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:92:21
   |
LL |     unimplemented!("{}",);
   |                     ^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-comma-behavior.rs:101:24
   |
LL |             write!(f, "{}",)?;
   |                        ^^

error: aborting due to 7 previous errors

